Upgrade to JDK 21 (#183)
* JDK upgrade

Signed-off-by: danish9039 <danishsiddiqui040@gmail.com>

* fix: Upgrade Scala to 2.12.18 to resolve JDK 21 compatibility issues

Signed-off-by: danish9039 <danishsiddiqui040@gmail.com>

* Fix CI tests for JDK 21 by adding permission flags

Signed-off-by: danish9039 <danishsiddiqui040@gmail.com>

---------

Signed-off-by: danish9039 <danishsiddiqui040@gmail.com>